# chicken

./: README.md  chicken.cabal  stack.yaml
src/: Main.hs
