name:                chicken
version:             0.1.0.0
homepage:            https://github.com/ljvmiranda921/chicken#readme
license:             BSD3
license-file:        LICENSE
author:              Lester James V. Miranda 
maintainer:          ljvmiranda@gmail.com 
copyright:           2020 Lester James V. Miranda 
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable chicken
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, csv >= 0.1.2
